<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:padding="@dimen/view_padding">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/item_padding">

                <ImageView
                    android:id="@+id/image_thumbnail"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="@dimen/thumbnail_margin_end"
                    android:src="@drawable/ic_add_photo_alternate_24px" />

                <EditText
                    android:id="@+id/edit_name"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:layout_toEndOf="@+id/image_thumbnail"
                    android:hint="@string/name" />

                <EditText
                    android:id="@+id/edit_price"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/edit_name"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:layout_toEndOf="@+id/image_thumbnail"
                    android:hint="@string/price"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/edit_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/edit_price"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:hint="@string/description"
                    android:maxLines="1" />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/footer"
            android:layout_below="@+id/header">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/notice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/no_categories"
                android:textSize="@dimen/notice_text_size"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/footer_margin_top"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/splitter_bottom_margin"
                android:background="@android:color/darker_gray" />

            <Button
                android:id="@+id/button_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/big_button_margin"
                android:layout_marginStart="@dimen/big_button_margin"
                android:text="@string/save" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>