<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical"
        android:padding="@dimen/view_padding">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/price_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_start_date"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false"
                    android:gravity="center"
                    android:hint="@string/start_date"
                    android:longClickable="false" />

                <EditText
                    android:id="@+id/edit_end_date"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:clickable="true"
                    android:focusable="false"
                    android:gravity="center"
                    android:hint="@string/end_date"
                    android:longClickable="false" />
            </LinearLayout>

            <EditText
                android:id="@+id/edit_discount_percent"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="Discount%"
                android:inputType="number"
                android:maxLength="3"
                android:maxLines="1"
                android:maxWidth="110dp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/footer"
            android:layout_below="@+id/header">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/notice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/no_flowers_found"
                android:textSize="@dimen/notice_text_size"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/footer_margin_top"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/splitter_bottom_margin"
                android:background="@android:color/darker_gray" />

            <Button
                android:id="@+id/button_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/big_button_margin"
                android:layout_marginRight="@dimen/big_button_margin"
                android:text="@string/save" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>